2006-03-04  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-languages-manager.c (string_to_tag_style):
	fixed a mem leak (see bug #172352)

2006-03-03  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-spinner.c: sync the code to latest epiphany code. Should
	fix multihead issues.

2006-03-03  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #333129 – [Multihead] cannot launch multiple instances of 
	                    gedit on different heads
	
	* gedit/gedit-app.c (gedit_app_create_window): added screen argument
	(is_in_workspace): new function
	(_gedit_app_get_window_in_workspace): fixed to me multihead aware

	* gedit/gedit-app.h: updated gedit_app_create_window prototype

	* gedit/gedit-window.c (clone_window): update to call 
	gedit_app_create_window with a screen parameter

	* gedit/gedit.c (on_message_received) (send_bacon_message) (main):
	updated the client/server protocol used to support single application
	instances so that display name and screen number are communicated from
	client to server
	
	* bindings/python/gedit.defs:
	* bindings/python/gedit.override: updated binding for create_window(), 
	overridden so that the screen param is optional

2006-03-02  Steve Frécinaux  <steve@istique.net>

	* plugins/modelines/modelines.py: 
	
	- parse every modelines instead of just	the first one, and merge the
	  options (from kate specs and bugs when using python charset)
	- fix vim and kate modelines parsing
	- use python list comprehensions and other pythonic beautifiations

	* plugins/modelines/gedit-plugin.desktop.in: updated information

2006-02-28  Christian Kirbach  <Christian.Kirbach@student.uni-siegen.de>

	* gedit/gedit-metadata-manager.c:
	* gedit/gedit-prefs-manager.c:
	fix 27 gcc4 compiler warnings, mostly pointer targets differing in 
	signedness

2006-02-28  Steve Frécinaux  <steve@istique.net>

	* plugins/pythonconsole/pythonconsole.py: fix python console history 
	(bug #332861)

=== gedit 2.13.92 ===
